finalizacao do projeto

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -9,7 +9,7 @@
             <i class="material-icons">add_shopping_cart</i>
             <span class="white-text">Produto</span>
          </a>
-          <a mat-list-item routerLink="consultarpreco">
+          <a mat-list-item routerLink="consultapreco">
              <i class="material-icons">search</i>
              <span class="white-text">Consultar Preço</span>
           </a>
